# overcook

./: .gitignore  README.md  assets.py  audio.py  constants.py  engine.py  entities.py  game.py  game_patch_guide.py  gen_assets.py  handoff.md  issue.txt  main.py  pyproject.toml  requirements.txt  rule.txt  test_game.py  ui.py  utils.py
assets/: Carb.rar  Condiment.rar  Green.rar  LICENSES.md  Protein.rar
examples/: demo_full_pipeline.py  demo_hand_tracking.py  demo_model_only.py  pose_tracker.py
overcook/: __init__.py  __main__.py  cli.py  constants.py  engine.py  entities.py  game.py  input.py  ui.py  utils.py
overcook/recognition/: __init__.py  camera.py  gesture.py  gesture_classification.py  hand_tracker.py  interface.py  motion.py  run_stage7.py  smoothing.py  splitter.py
src/detector/: ai_detector.md  gesture_detector.py  insturction.md  readme.md  test_webcam.py
src/recognition/: camera.py  gesture.py  gesture_classification.py  gesture_mlp.onnx  gesture_mlp.onnx.data  gesture_mlp_merged.onnx  hand_split.py  hand_tracker.py  interface.py  motion.py  pose_tracker.py  run_stage2.py  run_stage7.py
tests/: test_game.py
