[project]
name = "cooking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mediapipe==0.10.9",
    "numpy>=1.24",
    "opencv-python-headless>=4.13.0.92",
    "pygame>=2.6.1",
]

[project.optional-dependencies]
# Method 2: YOLO Pose (coarse, motion-focused)
method2 = ["ultralytics>=8.0"]
# Method 3: MediaPipe + LSTM (requires labeled training data)
method3 = ["torch>=2.0", "scikit-learn>=1.3"]
# Method 4: MediaPipe + DTW (template-matching prototype)
method4 = ["dtaidistance>=2.3"]
